corrected wrong axis on py code overflow being hidden

--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,7 @@ table {
   /*transform: translateY(1.5%);*/
   font-family: 'JetBrainsReg', sans-serif;
   overflow: auto;
-  overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 #pythonsnippet {
